--- a/src/scripts/get_data.ipynb
+++ b/src/scripts/get_data.ipynb
@@ -160,34 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/players/b/barnesc01/gamelog/2024\n",
-      "/players/s/schrode01/gamelog/2024\n",
-      "/players/b/bouchch01/gamelog/2024\n",
-      "/players/t/trentga02/gamelog/2024\n",
-      "/players/p/poeltja01/gamelog/2024\n",
-      "/players/m/mcdanja01/gamelog/2024\n",
-      "/players/d/dickgr01/gamelog/2024\n",
-      "/players/y/youngth01/gamelog/2024\n",
-      "/players/p/porteot01/gamelog/2024\n",
-      "/players/p/portejo01/gamelog/2024\n",
-      "/players/b/barrerj01/gamelog/2024\n",
-      "/players/t/templga01/gamelog/2024\n",
-      "/players/q/quickim01/gamelog/2024\n",
-      "/players/b/brownbr01/gamelog/2024\n",
-      "/players/n/nworajo01/gamelog/2024\n",
-      "/players/f/freemja01/gamelog/2024\n",
-      "/players/n/nowelma01/gamelog/2024\n",
-      "/players/l/lewiski01/gamelog/2024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create a new folder to holder team data if it does not already exist\n",
     "folder_name = f\"{team}_player_data\"\n",
@@ -231,53 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n",
-      "/var/folders/ts/8m1wccjj4tx3y_c1w6nz_p400000gn/T/ipykernel_47448/1699440100.py:28: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  game_log = pd.read_html(str(game_log_table))[0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from io import StringIO  # Import StringIO\n",
+    "\n",
     "# Structure subject to change if a dictionary does not work out\n",
     "dfs = {}\n",
     "\n",
@@ -305,14 +239,14 @@
     "    game_log_table = player_soup.find('table', {'id': 'pgl_basic'})\n",
     "\n",
     "    # Convert game log html table into a dataframe\n",
-    "    game_log = pd.read_html(str(game_log_table))[0]\n",
+    "    game_log = pd.read_html(StringIO(str(game_log_table)))[0]\n",
     "\n",
     "    dfs[player_name] = game_log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +462,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
