team data scraper

--- a/src/scripts/get_player_data.ipynb
+++ b/src/scripts/get_player_data.ipynb
@@ -1,44 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need to scrape for injuries (The MVP will not take this into account)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Initialize a list of all NBA teams\n",
-    "nba_teams = [\n",
-    "    'ATL',  # Atlanta Hawks\n",
-    "    'BOS',  # Boston Celtics\n",
-    "    'BKN',  # Brooklyn Nets\n",
-    "    'CHA',  # Charlotte Hornets\n",
-    "    'CHI',  # Chicago Bulls\n",
-    "    'CLE',  # Cleveland Cavaliers\n",
-    "    'DAL',  # Dallas Mavericks\n",
-    "    'DEN',  # Denver Nuggets\n",
-    "    'DET',  # Detroit Pistons\n",
-    "    'GSW',  # Golden State Warriors\n",
-    "    'HOU',  # Houston Rockets\n",
-    "    'IND',  # Indiana Pacers\n",
-    "    'LAC',  # LA Clippers\n",
-    "    'LAL',  # Los Angeles Lakers\n",
-    "    'MEM',  # Memphis Grizzlies\n",
-    "    'MIA',  # Miami Heat\n",
-    "    'MIL',  # Milwaukee Bucks\n",
-    "    'MIN',  # Minnesota Timberwolves\n",
-    "    'NOP',  # New Orleans Pelicans\n",
-    "    'NYK',  # New York Knicks\n",
-    "    'OKC',  # Oklahoma City Thunder\n",
-    "    'ORL',  # Orlando Magic\n",
-    "    'PHI',  # Philadelphia 76ers\n",
-    "    'PHX',  # Phoenix Suns\n",
-    "    'POR',  # Portland Trail Blazers\n",
-    "    'SAC',  # Sacramento Kings\n",
-    "    'SAS',  # San Antonio Spurs\n",
-    "    'TOR',  # Toronto Raptors\n",
-    "    'UTA',  # Utah Jazz\n",
-    "    'WAS'   # Washington Wizards\n",
-    "]"
+    "# Import the constant list from nba_teams.py\n",
+    "from nba_teams import nba_teams"
    ]
   },
   {
@@ -53,30 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_folder(folder_name):\n",
-    "    try:\n",
-    "\n",
-    "        # Check if the folder already exists\n",
-    "        if not os.path.exists(folder_name):\n",
-    "            \n",
-    "            # Create the folder\n",
-    "            os.makedirs(folder_name)\n",
-    "            \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")"
+    "from create_folder import create_folder"
    ]
   },
   {
@@ -89,7 +46,7 @@
     "import time\n",
     "\n",
     "#Create a new folder to holder team data if it does not already exist\n",
-    "folder_name = \"team_data\"\n",
+    "folder_name = \"roster_data\"\n",
     "create_folder(folder_name)\n",
     "\n",
     "#Iterate through teams and retrieve their data\n",
@@ -97,8 +54,8 @@
     "    url = team_url.format(team)\n",
     "    data = requests.get(url)\n",
     "\n",
-    "    #Save the data in the team_data folder as an html file\n",
-    "    with open(\"team_data/{}.html\".format(team), \"w+\") as f:\n",
+    "    #Save the data in the roster_data folder as an html file\n",
+    "    with open(\"roster_data/{}.html\".format(team), \"w+\") as f:\n",
     "        f.write(data.text)\n",
     "\n",
     "    #To conform to the sports reference limit of 20req/min\n",
@@ -124,7 +81,7 @@
     "team = \"TOR\"\n",
     "\n",
     "#Open and read html file from the file path\n",
-    "with open(f\"team_data/{team}.html\") as f:\n",
+    "with open(f\"roster_data/{team}.html\") as f:\n",
     "    page = f.read()"
    ]
   },
@@ -187,7 +144,7 @@
     "        # Get the text content (name of the player)\n",
     "        player_name = link.text.strip()\n",
     "\n",
-    "        #Save the data in the team_data folder as an html file\n",
+    "        #Save the data in the roster_data folder as an html file\n",
     "        with open(folder_name + \"/{}.html\".format(player_name), \"w+\") as f:\n",
     "            f.write(player_data.text)\n",
     "\n",
